:bug: FIx wrong background-image URL

--- a/public/style/master.scss
+++ b/public/style/master.scss
@@ -183,7 +183,7 @@ section {
 }
 
 .header {
-  background-image: url('https://tklein1801.github.io/assets/images/bg.jpg');
+  background-image: url('../bg.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
